--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,6 @@
 .header {
   margin: 8.8rem 0 6.4rem 0;
-  grid-column: 2 / 11;
+  width: 80%;
   grid-row: 1;
   display: flex;
   justify-content: space-between;
@@ -10,6 +10,8 @@
   font-size: 2.4rem;
   line-height: 3.2rem;
   font-weight: 700;
+  padding-left: 11.9rem;
+  text-transform: capitalize;
 }
 
 .link {
@@ -19,22 +21,23 @@
 }
 
 .main {
-  grid-column: 1 / -1;
   grid-row: 2;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-gap: 3.2rem;
+  width: 80%;
+  grid-row: 2;
 }
 
 .headingWrapper {
-  grid-column: 1 / span 10;
   background: rgb(231, 231, 231);
+  min-height: calc(100vh - 17.9rem);
   padding: 8.8rem 11.9rem;
 }
 
 .sidebar {
-  grid-column: 11 / -1;
+  width: calc(20vw - 2.4rem);
+  position: fixed;
   grid-row: 2;
+  right: 2.4rem;
+  top: 18.4rem;
 }
 
 .h1 {
@@ -57,7 +60,10 @@
 }
 
 .button {
-  margin-bottom: 6.4rem;
+  margin-bottom: 11.2rem;
+  padding: 1.6rem 2.4rem;
+  outline: none;
+  border-radius: 0;
 }
 
 .text {
@@ -67,103 +73,10 @@
 }
 
 .footer {
-  margin-top: 9.6rem;
+  margin-top: 11.2rem;
   grid-column: 10 / span 1;
   font-size: 1.2rem;
   line-height: 2rem;
   font-weight: 400;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+  text-transform: capitalize;
 }
