--- a/components/Content.module.css
+++ b/components/Content.module.css
@@ -108,6 +108,7 @@
   border-radius: 0;
   background-color: transparent;
   font-weight: bold;
+  text-transform: capitalize;
 }
 
 .button:active {
