--- a/components/BookList.module.css
+++ b/components/BookList.module.css
@@ -4,71 +4,25 @@
   grid-row: 2;
 }
 
+.paragraph {
+  padding: 0 11.9rem 1.6rem 11.9rem;
+}
+
 .headingContainer {
   background-color: #cfd3cf;
   min-height: calc(100vh - 17.9rem);
   position: relative;
   display: flex;
+  flex-direction: column;
+  padding: 4.7rem 11.9rem;
 }
 
-.animationWipe {
-  animation: wipe 2 1s 0.5s alternate cubic-bezier(0.28, 0.12, 0.44, 0.8);
-}
-
-.animationSwipe {
-  animation: swipe 2 1s 0.5s alternate cubic-bezier(0.28, 0.12, 0.44, 0.8);
-}
-
-.animationDissolve {
-  animation: dissolve 2 1.5s alternate cubic-bezier(0.28, 0.12, 0.44, 0.8);
-}
-
-.animationDissolveAgain {
-  animation: dissolveRepeat 2 1.5s alternate cubic-bezier(0.28, 0.12, 0.44, 0.8);
-}
-
-@keyframes wipe {
-  0% {
-    clip-path: inset(0);
-  }
-  100% {
-    clip-path: inset(0 100% 0 0);
-  }
-}
-
-@keyframes swipe {
-  0% {
-    clip-path: inset(0);
-  }
-  100% {
-    clip-path: inset(0 100% 0 0);
-  }
-}
-
-@keyframes dissolve {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-@keyframes dissolveRepeat {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-.h1 {
-  padding: 8.8rem 11.9rem;
+.bookList {
   font-family: 'Libre Baskerville', serif;
-  font-size: 5.6rem;
-  line-height: 7.2rem;
+  font-size: 2.4rem;
+  line-height: 3.2rem;
   font-weight: 400;
-  z-index: 4;
+  margin-bottom: 2.4rem;
 }
 
 .mainBackground {
