--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -1,6 +1,6 @@
 .header {
   margin: 8.8rem 0 6.4rem 0;
-  width: 80%;
+  width: 79%;
   grid-row: 1;
   display: flex;
   justify-content: space-between;
@@ -14,8 +14,34 @@
   text-transform: capitalize;
 }
 
-.link {
+.pageLinks {
   font-size: 1.6rem;
   line-height: 2.4rem;
+  font-weight: 400;
+  display: inline-block;
+  position: relative;
+  padding-bottom: 4px;
   text-transform: capitalize;
+}
+
+.pageLinks:hover {
+  cursor: pointer;
+}
+
+.pageLinks:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.pageLinks:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #869986;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
 }
