--- a/components/Content.module.css
+++ b/components/Content.module.css
@@ -29,52 +29,6 @@
   top: 0;
 }
 
-.h2 {
-  font-size: 1.6rem;
-  line-height: 2.4rem;
-  font-weight: 600;
-  text-transform: capitalize;
-  margin-bottom: -0.8rem;
-}
-
-.wrapper {
-  margin-bottom: 2.4rem;
-}
-
-.sidebar {
-  width: calc(20vw - 2.4rem);
-  position: fixed;
-  grid-row: 2;
-  right: 2.4rem;
-  top: 18.4rem;
-}
-
-.button {
-  margin-bottom: 11.2rem;
-  padding: 1.6rem 2.4rem;
-  outline: none;
-  border-style: solid 2px #cfd3cf;
-  border-radius: 0;
-  background-color: transparent;
-  font-weight: bold;
-  text-transform: capitalize;
-}
-
-.button:hover {
-  background-color: #cfd3cf;
-  transition: all 0.2s ease-in-out;
-}
-
-.button:active {
-  border-style: outset;
-}
-
-.text {
-  font-size: 1.6rem;
-  line-height: 2.4rem;
-  font-weight: 400;
-}
-
 .pageLinks {
   font-size: 1.2rem;
   line-height: 2rem;
@@ -101,4 +55,54 @@
   background-color: #869986;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
+}
+
+/* SIDEBAR CSS */
+
+.sidebar {
+  width: calc(20vw - 2.4rem);
+  position: fixed;
+  grid-row: 2;
+  right: 2.4rem;
+  top: 18.4rem;
+}
+
+.wrapper {
+  margin-bottom: 2.4rem;
+}
+
+.h2 {
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  font-weight: 600;
+  text-transform: capitalize;
+  margin-bottom: -0.8rem;
+}
+
+.button {
+  margin-bottom: 11.2rem;
+  padding: 1.6rem 2.4rem;
+  outline: none;
+  min-width: 140px;
+  border-style: solid 2px black;
+  border-radius: 0;
+  background-color: transparent;
+  text-transform: capitalize;
+  font-weight: 700;
+}
+
+.button:hover {
+  cursor: pointer;
+  background-color: #cfd3cf;
+  transition: all 0.2s ease-in-out;
+}
+
+.button:active {
+  border-style: outset;
+}
+
+.text {
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  font-weight: 200;
 }
