--- a/components/BookList.module.css
+++ b/components/BookList.module.css
@@ -32,86 +32,33 @@
   transition: 0.2s all ease-in-out;
 }
 
-.mainBackground {
-  background-color: #cfd3cf;
-  height: 100%;
-  width: 100%;
-  z-index: 1;
-  position: absolute;
-  top: 0;
-}
+/* PHONE */
+@media only screen and (max-width: 375px) {
+  .main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
 
-.h2 {
-  font-size: 1.6rem;
-  line-height: 2.4rem;
-  font-weight: 600;
-  text-transform: capitalize;
-  margin-bottom: -0.8rem;
-}
+  .headingContainer {
+    background-color: #cfd3cf;
+    min-height: min-content;
+    position: relative;
+    display: flex;
+    padding: 1.6rem;
+  }
 
-.wrapper {
-  margin-bottom: 2.4rem;
-}
+  .paragraph {
+    margin-bottom: 2.4rem;
+    width: 100%;
+    font-weight: 200;
+  }
 
-.sidebar {
-  width: calc(20vw - 2.4rem);
-  position: fixed;
-  grid-row: 2;
-  right: 2.4rem;
-  top: 18.4rem;
-}
-
-.button {
-  margin-bottom: 11.2rem;
-  padding: 1.6rem 2.4rem;
-  outline: none;
-  border-style: solid 2px #cfd3cf;
-  border-radius: 0;
-  background-color: transparent;
-  font-weight: bold;
-  text-transform: capitalize;
-}
-
-.button:active {
-  border-style: outset;
-}
-
-.text {
-  font-size: 1.6rem;
-  line-height: 2.4rem;
-  font-weight: 400;
-}
-
-.footer {
-  margin-top: 11.2rem;
-  grid-column: 10 / span 1;
-  text-transform: capitalize;
-}
-
-.pageLinks {
-  font-size: 1.2rem;
-  line-height: 2rem;
-  font-weight: 400;
-  display: inline-block;
-  position: relative;
-  padding-bottom: 4px;
-  text-decoration: none;
-}
-
-.pageLinks:hover:after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-}
-
-.pageLinks:after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #869986;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
+  .bookList {
+    font-family: 'Libre Baskerville', serif;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    font-weight: 400;
+    z-index: 4;
+  }
 }
