--- a/components/Content.module.css
+++ b/components/Content.module.css
@@ -1,7 +1,6 @@
 .main {
   grid-row: 2;
   width: 79%;
-  grid-row: 2;
 }
 
 .headingContainer {
@@ -88,7 +87,7 @@
   border-radius: 0;
   background-color: transparent;
   text-transform: capitalize;
-  font-weight: 700;
+  font-weight: 300;
 }
 
 .button:hover {
@@ -101,8 +100,57 @@
   border-style: outset;
 }
 
+.buttonMobile {
+  display: none;
+}
+
 .text {
   font-size: 1.6rem;
   line-height: 2.4rem;
   font-weight: 200;
+}
+
+/* PHONE */
+@media only screen and (max-width: 375px) {
+  .main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    grid-row: unset;
+  }
+
+  .headingContainer {
+    background-color: #cfd3cf;
+    min-height: min-content;
+    position: relative;
+    display: flex;
+  }
+
+  .h1 {
+    padding: 1.6rem;
+    font-family: 'Libre Baskerville', serif;
+    font-size: 3.2rem;
+    line-height: 4.8rem;
+    font-weight: 400;
+    z-index: 4;
+  }
+
+  .sidebar {
+    width: 100%;
+    position: unset;
+  }
+
+  .button {
+    margin-bottom: 1.6rem;
+    margin-top: 1.6rem;
+    padding: 1.6rem 2.4rem;
+    outline: none;
+    width: 100%;
+    min-width: 140px;
+    border-style: solid 2px black;
+    border-radius: 0;
+    background-color: transparent;
+    text-transform: capitalize;
+    font-weight: 300;
+  }
 }
