--- a/components/DetailSidebar.module.css
+++ b/components/DetailSidebar.module.css
@@ -45,3 +45,9 @@
   line-height: 2.4rem;
   font-weight: 200;
 }
+
+@media only screen and (max-width: 375px) {
+  .sidebar {
+    display: none;
+  }
+}
