--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -46,7 +46,35 @@
   transition: transform 0.25s ease-out;
 }
 
+.burger {
+  display: none;
+}
+
 .active {
   font-weight: bold;
   border-bottom: 2px solid #869986;
+}
+
+/* PHONE */
+@media only screen and (max-width: 375px) {
+  .header {
+    margin: 4rem 0 6.4rem 0;
+    width: 100%;
+  }
+
+  .logo {
+    font-size: 2.4rem;
+    line-height: 3.2rem;
+    font-weight: 700;
+    padding-left: 0;
+    text-transform: capitalize;
+  }
+
+  .pageLinks {
+    display: none;
+  }
+
+  .burger {
+    display: block;
+  }
 }
