--- a/components/Breadcrumb.module.css
+++ b/components/Breadcrumb.module.css
@@ -1,4 +1,5 @@
 .container {
+  display: none;
   font-size: 1.2rem;
   line-height: 2rem;
   margin-bottom: 2.4rem;
@@ -11,4 +12,10 @@
 .span {
   font-weight: 900;
   text-transform: capitalize;
+}
+
+@media only screen and (max-width: 375px) {
+  .container {
+    display: block;
+  }
 }
