--- a/components/BreadcrumbDetail.module.css
+++ b/components/BreadcrumbDetail.module.css
@@ -2,6 +2,7 @@
   font-size: 1.2rem;
   line-height: 2rem;
   margin-bottom: 2.4rem;
+  display: none;
 }
 
 .dash {
@@ -15,4 +16,10 @@
 .detail {
   font-weight: 900;
   text-transform: capitalize;
+}
+
+@media only screen and (max-width: 375px) {
+  .container {
+    display: block;
+  }
 }
