--- a/components/BookList.module.css
+++ b/components/BookList.module.css
@@ -24,12 +24,33 @@
   font-size: 2.4rem;
   line-height: 3.2rem;
   font-weight: 400;
-  margin-bottom: 2.4rem;
+  margin-bottom: 4.8rem;
+  list-style: none;
+  position: relative;
+  padding-bottom: 12px;
 }
 
 .bookList:hover {
-  color: #869986;
+  cursor: pointer;
   transition: 0.2s all ease-in-out;
+}
+
+.bookList:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.bookList:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #869986;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
 }
 
 /* PHONE */
